--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Remy</title>
 	<link rel="icon" href="img/Remy-avatar.jpeg">
-	<link rel="stylesheet" type="text/css" href="css/hero.css">
+	<link rel="stylesheet" type="text/CSS" href="CSS/hero.css">
 </head>
 <body>
 	<!--header element-->
