--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		</ol>
 		
 		<!-- Friends -->
-		<h2>Remy's friends</h2>
+		<h2>Remy's many friends</h2>
 		<p>Remy has some decent ratty friends! i think his best friend is Emile! Click on the links below to read more about them:</p>
 		<ul>
 			<li> <a target="_blank" href="https://ratatouille.fandom.com/wiki/Mabel">Mabel</a></li>
