--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<!-- characterristics -->
 		<h2>Remy's characterristics!</h2>
 		<ol>
-			<li>He's got small hands</li>
+			<li>He's got quite small hands</li>
 			<li>He's treated as vermin</li>
 			<li>He's trying to be a chef!</li>
 		</ol>
