--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Remy</title>
 	<link rel="icon" href="img/Remy-avatar.jpeg">
+	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./css/hero.css">
 </head>
 <body>
@@ -17,7 +18,7 @@
 		<h2>About Remy</h2>
 		<p>Remy is a rat! He's a chef and controls the ginger man in a kitchen! He also has a family of rats that takeover the kitchen!</p>
 		<img src="img/Remy-emile.jpeg">
-		<p>Remy and Emile</p>
+		<p class="caption"> Remy and Emile</p>
 
 		<!-- characterristics -->
 		<h2>Remy's characterristics!</h2>
