--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<ol>
 			<li>He's got quite small hands</li>
 			<li>He's treated as vermin</li>
-			<li>He's trying to be a chef!</li>
+			<li>He's trying to be a chef!!</li>
 		</ol>
 		
 		<!-- Friends -->
