--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Remy</title>
 	<link rel="icon" href="img/Remy-avatar.jpeg">
 	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="./css/hero.css">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 	<!--header element-->
